plugins {
    id 'java'
    id 'maven-publish'
}

base {
    archivesName = archives_name
}

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }

    withSourcesJar()

    targetCompatibility = JavaVersion.VERSION_21
    sourceCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile).configureEach {
    it.options.encoding = "UTF-8"
    it.options.release = 21
    options.compilerArgs += "--enable-preview"
}

dependencies {
    implementation "org.jetbrains:annotations:24.0.0"

    implementation "org.ow2.asm:asm:6.0"
    implementation "org.ow2.asm:asm-commons:9.7"
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = project.group
            artifactId = project.archives_name
            version = project.version

            from components.java
        }
    }
}